verif/test/deca/codegen/invalid/loops/cond-for-verif.res
src/test/deca/codegen/invalid/loops/cond-for.deca:9:13: missing ')' at ';'
